// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render should match the snapshot when there is a user id 1`] = `
<div
  className="App"
>
  <Header
    handleSignOut={[Function]}
    user={
      Object {
        "id": "abc123",
      }
    }
  />
  <div>
    <Switch>
      <Route
        component={[Function]}
        path="/schedule"
      />
      <Route
        component={[Function]}
        path="/book-pairing"
      />
      <Route
        component={[Function]}
        path="/confirm"
      />
      <Route
        component={[Function]}
        path="/edit-availability"
      />
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;

exports[`App render should match the snapshot when there is no user id 1`] = `
<div
  className="App"
>
  <Header
    handleSignOut={[Function]}
    user={Object {}}
  />
  <div>
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        path="/set-availability"
        render={[Function]}
      />
      <Route
        path="/schedule"
        render={[Function]}
      />
      <Route
        path="/book-pairing"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;
